Start of implementation

--- a/Unscented Kalman Filter.ipynb
+++ b/Unscented Kalman Filter.ipynb
@@ -111,7 +111,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Polar coordinates](images/polar.png)\n"
+    "![UKF Filter steps](images/ukf_filter_steps.png)\n"
    ]
   },
   {
